--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
  "type": "module",
  "dependencies": {
+  "@aws-sdk/client-s3": "^3.256.0",
+  "@aws-sdk/s3-request-presigner": "^3.256.0",
   "dotenv": "^16.0.3",
   "express": "^4.18.2",
   "multer": "^1.4.5-lts.1",
